manifests/default/default-commits-to-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    cert-manager.io/issuer: default-commits-to-issuer
  name: star-default-commits-to
  namespace: default
spec:
  rules:
  - host: kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  - host: kpb.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  - host: klb.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  - host: jrc.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  - host: aluc.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  - host: kb.kingdonb.dev
    http:
      paths:
      - backend:
          service:
            name: commits-to
            port:
              number: 5000
        path: /
  tls:
  - hosts:
    - kpb.kingdonb.dev
    - klb.kingdonb.dev
    - jrc.kingdonb.dev
    - aluc.kingdonb.dev
    - kb.kingdonb.dev
    - kingdonb.dev
    secretName: default-commits-to-cert-secret
